# cmake-learning

./: README.md
helloCMake/: CMakeLists.txt
myMenu/: myMenu.pro  myopendialog.cpp  myopendialog.h  myopendialog.ui  widget.cpp  widget.h
qtdemo1-1Mydi/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mdichild.cpp  mdichild.h  qtdemo1-1Mydi.pro
